[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/things/Supershape.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[node name="Flame" type="Area2D"]
script = ExtResource( 1 )
supershape_scale = 6.0
supershape_np = 16
m = 8.0
n1 = 0.2
n2 = 1.5
n3 = 1.5
m_max = 8
m_min = 10

[node name="UITimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Flame_body_entered"]
[connection signal="timeout" from="UITimer" to="." method="_on_UITimer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
